--- a/app/src/main/res/layout/activity_note_add_update.xml
+++ b/app/src/main/res/layout/activity_note_add_update.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_note_add_update"
     android:layout_width="match_parent"
@@ -12,6 +12,7 @@
     tools:context=".NoteAddUpdateActivity">
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/judul"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin">
@@ -26,17 +27,17 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/lirik"
+        android:gravity="top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_vertical_margin">
+        android:layout_below="@id/judul">
 
         <EditText
             android:id="@+id/edt_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/description"
-            android:inputType="textCapSentences"
-            android:maxLines="1" />
+            android:hint="@string/description" />
     </android.support.design.widget.TextInputLayout>
 
     <Button
@@ -44,5 +45,6 @@
         style="@style/Base.Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/lirik"
         android:text="@string/submit" />
-</LinearLayout>
+</RelativeLayout>
