--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp">
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp">
     <android.support.v7.widget.CardView
         android:id="@+id/cv_item_note"
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
                 android:textSize="12sp"
                 android:text="@string/date"
                 android:id="@+id/tv_item_date"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+                android:layout_marginBottom="10dp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -40,6 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="start"
+                android:maxLines="1"
                 android:textSize="14sp"
                 android:text="@string/description"
                 android:id="@+id/tv_item_description"/>
