--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,23 +17,23 @@
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Daftar Lirik Saya" />
     </group>
-        <!-- <item
-            android:id="@+id/nav_manage"
+         <!-- <item
+            android:id="@+id/nav_out"
             android:icon="@drawable/ic_menu_manage"
             android:title="Tools" />
 
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Keluar" />
-        </menu>
-    </item> -->
+        <item
+            android:id="@+id/nav_share"
+            android:icon="@drawable/ic_menu_share"
+            android:title="Share" />
+    -->
+        <item android:title="Sistem">
+            <menu>
+                <item
+                    android:id="@+id/nav_send"
+                    android:icon="@drawable/ic_menu_send"
+                    android:title="Keluar" />
+            </menu>
+        </item>
 
 </menu>
