--- a/app/src/main/res/layout/lirik_lagu_widget.xml
+++ b/app/src/main/res/layout/lirik_lagu_widget.xml
@@ -1,50 +1,61 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#09C"
     android:padding="@dimen/widget_margin">
-
-    <ImageButton
-        android:id="@+id/img_logo"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:layout_centerVertical="true"
-        android:layout_margin="16dp"
-        android:background="#09C"
-        android:scaleType="fitCenter"
-        android:src="@drawable/logo" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/img_logo"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:background="#09C"
+        android:layout_margin="8dp"
+        android:padding="8dp">
 
-        <TextView
-            android:id="@+id/appwidget_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/appwidget_text"
-            android:layout_marginLeft="8dp"
+        <ImageButton
+            android:id="@+id/img_logo"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_centerVertical="true"
+            android:layout_margin="8dp"
             android:background="#09C"
-            android:contentDescription="@string/appwidget_text"
-            android:padding="5dp"
-            android:text="Terakhir diputar"
-            android:textColor="#ffffff"
-            android:textSize="14sp" />
+            android:scaleType="fitCenter"
+            android:src="@drawable/logo" />
 
-        <TextView
-            android:id="@+id/appwidget_text"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:background="#09C"
-            android:contentDescription="Judul Lagu"
-            android:text="Judul Lagu"
-            android:textColor="#ffffff"
-            android:textSize="24sp"
-            android:textStyle="bold|italic" />
+            android:layout_centerVertical="true"
+            android:layout_marginTop="3dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/appwidget_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/appwidget_text"
+                android:layout_marginLeft="8dp"
+                android:background="#09C"
+                android:contentDescription="@string/appwidget_text"
+                android:padding="5dp"
+                android:text="Terakhir diputar"
+                android:textColor="#ffffff"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/appwidget_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:background="#09C"
+                android:contentDescription="Judul Lagu"
+                android:text="Judul Lagu"
+                android:textColor="#ffffff"
+                android:textSize="18sp"
+                android:textStyle="bold|italic" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
