--- a/app/src/main/res/layout/lirik_lagu_widget.xml
+++ b/app/src/main/res/layout/lirik_lagu_widget.xml
@@ -37,23 +37,24 @@
                 android:layout_above="@+id/appwidget_text"
                 android:layout_marginLeft="8dp"
                 android:background="#09C"
-                android:contentDescription="@string/appwidget_text"
+                android:contentDescription="Aplikasi Lirik Lagu"
                 android:padding="5dp"
-                android:text="Terakhir diputar"
+                android:text="Aplikasi Lirik Lagu"
                 android:textColor="#ffffff"
-                android:textSize="12sp" />
+                android:textSize="18sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/appwidget_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
+                android:layout_marginTop="1dp"
                 android:background="#09C"
-                android:contentDescription="Judul Lagu"
-                android:text="Judul Lagu"
+                android:contentDescription="Beta version"
+                android:text="Beta version"
                 android:textColor="#ffffff"
-                android:textSize="18sp"
-                android:textStyle="bold|italic" />
+                android:textSize="12sp" />
         </LinearLayout>
 
     </LinearLayout>
